update init for encode feignclient